--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,21 @@
-h1 {
-   color: #d22e3a
+form.login_form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+    background-color: #ffc8a8;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+.intro {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+}
+.block {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+#email-input {
+    margin-top: 50px;
 }
